--- a/Application.MobileClient/Application.MobileClient/AppShell.xaml
+++ b/Application.MobileClient/Application.MobileClient/AppShell.xaml
@@ -24,7 +24,7 @@
     </Shell.Resources>
 
     <TabBar>
-        <ShellContent Title="Tours" Icon="icon_about.png" Route="ToursPage" ContentTemplate="{DataTemplate mobileClient:MainPage}" />
+        <ShellContent Title="Tours" Icon="icon_about.png" Route="ToursPage" ContentTemplate="{DataTemplate mobileClient:RegPage}" />
     </TabBar>
 
 </Shell>
