--- a/Application.Web.Client/Pages/HotelsOfTourPage/CreateHotelsOfTour.razor
+++ b/Application.Web.Client/Pages/HotelsOfTourPage/CreateHotelsOfTour.razor
@@ -20,8 +20,13 @@
     void AddNewHotelsOfTour()
     {
         bool result = _db.CreateNewHotelsOfTour(hotelsOfTour);
-
+        try{
         if (result)
             navManager.NavigateTo("/");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
     }
 }
