--- a/Application.Web.Client/Pages/CitiesPage/CreateCities.razor
+++ b/Application.Web.Client/Pages/CitiesPage/CreateCities.razor
@@ -20,8 +20,13 @@
     void AddNewCity()
     {
         bool result = _db.CreateNewCity(city);
-
-        if (result)
+        try{
+            if (result)
             navManager.NavigateTo("/");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
     }
 }
