--- a/Application.Web.Client/Pages/CitiesPage/IndexCities.razor
+++ b/Application.Web.Client/Pages/CitiesPage/IndexCities.razor
@@ -1,5 +1,6 @@
 ﻿@page "/cities"
-@using Application.Web.Client.Data.Repository
+@using Application.Web.Client.Data.Repository;
+@using City = Application.Database.Models.City
 @inject NavigationManager navManager
 @inject IRepository _db
 
