--- a/Application.Web.Client/Pages/Transport/EditTransport.razor
+++ b/Application.Web.Client/Pages/Transport/EditTransport.razor
@@ -11,7 +11,7 @@
     <div class="col-6">
         @if (transport is not null)
         {
-            <FormForGenre Genre="transport" OnValidSubmit="Edit"/>
+            <FormForTransport Transport="transport" OnValidSubmit="Edit"/>
         }
         else
         {
