--- a/Application.Web.Client/Shared/AccoutManagement.razor
+++ b/Application.Web.Client/Shared/AccoutManagement.razor
@@ -38,7 +38,7 @@
                 <div>
                     <label>
                         Username:
-                        <InputText @bind-Value="regFormModel.Name"></InputText>
+                        <InputText @bind-Value="regFormModel.Name" pattern="[^ ]+" title="Spaces are not allowed"></InputText>
                     </label>
                 </div>
                 <div>
@@ -56,7 +56,7 @@
                 <div>
                     <label>
                         Full Name:
-                        <InputText @bind-Value="regFormModel.FIO"></InputText>
+                        <InputText @bind-Value="regFormModel.FIO" pattern="[^ ]+" title="Spaces are not allowed"></InputText>
                     </label>
                 </div>
                 <div>
@@ -68,7 +68,7 @@
                 <div>
                     <label>
                         Phone:
-                        <InputText @bind-Value="regFormModel.Phone"></InputText>
+                        <InputText @bind-Value="regFormModel.Phone" pattern="[^ ]+" title="Spaces are not allowed"></InputText>
                     </label>
                 </div>
                 <div>
