--- a/Application.Web.Client/Shared/AccoutManagement.razor
+++ b/Application.Web.Client/Shared/AccoutManagement.razor
@@ -23,13 +23,13 @@
                 <div>
                     <label>
                         Username:
-                        <InputText @bind-Value="LoginFormModel.Username"></InputText>
+                        <InputText pattern="[^ ]+" title="Spaces are not allowed" @bind-Value="LoginFormModel.Username"></InputText>
                     </label>
                 </div>
                 <div>
                     <label>
                         Password:
-                        <InputText type="password" @bind-Value="LoginFormModel.Password"></InputText>
+                        <InputText pattern="[^ ]+" title="Spaces are not allowed" type="password" @bind-Value="LoginFormModel.Password"></InputText>
                     </label>
                 </div>
                 <div>
@@ -151,19 +151,19 @@
                         <h4>Profile History</h4>
                         <table class="table table-th-block">
                             <tbody>
-                            @if (User != null)
-                            {
-                                <tr><td class="active">User Id:</td><td>@User?.Id.ToString()</td></tr>
-                                <tr>
-                                    <td class="active">
-                                        Registered:
-                                    </td>
-                                    <td>@User?.DateCreated.ToString()</td>
-                                </tr>
-                                <tr><td class="active">Login:</td><td>@User?.Username</td></tr>
-                                <tr><td class="active">Role:</td><td>@User?.Role</td></tr>
-                                <tr><td class="active">Full years:</td><td>@User?.Age</td></tr>
-                            }
+                                @if (User != null)
+                                {
+                                    <tr><td class="active">User Id:</td><td>@User?.Id.ToString()</td></tr>
+                                    <tr>
+                                        <td class="active">
+                                            Registered:
+                                        </td>
+                                        <td>@User?.DateCreated.ToString()</td>
+                                    </tr>
+                                    <tr><td class="active">Login:</td><td>@User?.Username</td></tr>
+                                    <tr><td class="active">Role:</td><td>@User?.Role</td></tr>
+                                    <tr><td class="active">Full years:</td><td>@User?.Age</td></tr>
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -179,26 +179,26 @@
             <div class="col">
                 <table class="table table-striped">
                     <thead>
-                    <tr>
-                        <th scope="col">Order ID</th>
-                        <th scope="col">Tour Id</th>
-                        <th scope="col">Tour Operator ID</th>
-                        <th scope="col">User Id</th>
-                    </tr>
+                        <tr>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Tour Id</th>
+                            <th scope="col">Tour Operator ID</th>
+                            <th scope="col">User Id</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    @foreach (var item in orders)
-                    {
-                        @if (@item.UserId == @User?.Id)
+                        @foreach (var item in orders)
                         {
-                            <tr scope="row">
-                                <td>@item.OrderId</td>
-                                <td>@item.TourId</td>
-                                <td>@item.TourOperatorId</td>
-                                <td>@item.UserId</td>
-                            </tr>
+                            @if (@item.UserId == @User?.Id)
+                            {
+                                <tr scope="row">
+                                    <td>@item.OrderId</td>
+                                    <td>@item.TourId</td>
+                                    <td>@item.TourOperatorId</td>
+                                    <td>@item.UserId</td>
+                                </tr>
+                            }
                         }
-                    }
                     </tbody>
                 </table>
             </div>
@@ -249,10 +249,18 @@
 
     private async Task TryLogin()
     {
-        await WebsiteAuthenticator.LoginAsync(LoginFormModel);
-        _navi.NavigateTo("/");
+        try
+        {
+            await WebsiteAuthenticator.LoginAsync(LoginFormModel);
+                _navi.NavigateTo("/");
+        }
+        catch
+        {
+            _visible = true;
+            errordescription = "Пользователь не найден";
+        }
     }
-    
+
 
     private void HandleOk(MouseEventArgs e)
     {
@@ -283,7 +291,7 @@
             else
             {
                 _visible = true;
-                errordescription = "Пароли не совпадают";
+                errordescription = "Пользователь с таким именем уже существует";
             }
         }
         catch (Exception ex)
